just made the html nicer

--- a/create.html
+++ b/create.html
@@ -1,3 +1,5 @@
+<title>CREATE</title>
+
 <h3> Create </h3>
 <form action="/create" method="post">
 Inches: <input type="number" name="inches">
@@ -5,3 +7,5 @@ Date: <input type="date" name="date">
 Location: <input type="string" name="location">
 <input type="submit" value="Submit">
 </form>
+
+<a href = "/"> Click here to go back home </a>
