--- a/delete.html
+++ b/delete.html
@@ -1,3 +1,5 @@
+<title>DELETE</title>
+
 <h3> Delete </h3>
 
 <form action="/delete" method="post">
@@ -5,3 +7,5 @@ Date: <input type="date" name="date">
 Location: <input type="string" name="location">
 <input type="submit" value="Submit">
 </form>
+
+<a href = "/"> Click here to go back home </a>
