--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-
+<title>HOME</title>
+<body>
 <h1> Welcome to my Snow Calculator </h1>
 
-<a href = 'create'> <p> Click here to create data in the database </p> </a>
-<a href = 'find'> <p> Click here to find data in the database </p> </a>
-<a href = 'delete'> <p> Click here to delete data in the database </p> </a>
-<a href = 'update'> <p> Click here to update data in the database </p> </a>
+<b><p>C</b>REATE:</p><a href = 'create'> <p> Click here to create data in the database </p> </a>
+<b><p>R</b>EAD:</p><a href = 'find'> <p> Click here to find data in the database </p> </a>
+<b><p>U</b>PDATE:</p><a href = 'update'> <p> Click here to update data in the database </p> </a>
+<b><p>D</b>ELETE:</p><a href = 'delete'> <p> Click here to delete data in the database </p> </a>
+</body>
