--- a/update.html
+++ b/update.html
@@ -1,3 +1,5 @@
+<title>UPDATE</title>
+
 <h3> Update </h3>
 
 <form action="/update" method="post">
@@ -8,3 +10,5 @@ Location: <input type="string" name="location">
 Inches: <input type="number" name="inches">
 <input type="submit" value="Submit">
 </form>
+
+<a href = "/"> Click here to go back home </a>
